use classpath resource loader for prompts