@@ -1,15 +1,18 @@
 package com.example.AutoDocX.service.agent.util;
 
+import org.springframework.core.io.ClassPathResource;
+
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 
 public class AgentUtil {
     public static String loadSystemPrompt(String filename) {
         try {
-            return new String(
-                    Files.readAllBytes(Paths.get("src/main/resources/prompt/" + filename))
-            );
+            ClassPathResource resource = new ClassPathResource("prompt/" + filename);
+            try (InputStream inputStream = resource.getInputStream()) {
+                return new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
+            }
         } catch (IOException e) {
             throw new RuntimeException("Failed to load system prompt file: " + filename, e);
         }
